--- a/Gold_Mining_Optimization_V2.ipynb
+++ b/Gold_Mining_Optimization_V2.ipynb
@@ -56,7 +56,7 @@
         "id": "16Zd2lWOuQIn"
       },
       "source": [
-        "# Integrated Project 3 - Gold Mining"
+        "# Gold Mining Optimization"
       ]
     },
     {
